--- a/OrderManagementSystem.API/appsettings.Development.json
+++ b/OrderManagementSystem.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.,1433;Database=SmoothStack;User ID=sa;Password=SmoothStack123;TrustServerCertificate=True;"
   }
 }
