--- a/OrderManagementSystem.Application/OrderManagementSystem.Application.csproj
+++ b/OrderManagementSystem.Application/OrderManagementSystem.Application.csproj
@@ -4,6 +4,10 @@
       <ProjectReference Include="..\OrderManagementSystem.Domain\OrderManagementSystem.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="14.0.0" />
+    </ItemGroup>
+
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
